--- a/src/post-py/Dockerfile
+++ b/src/post-py/Dockerfile
@@ -1,11 +1,11 @@
 FROM python:3.6.0-alpine
+
 WORKDIR /app
 ADD . /app
 
-RUN apk --no-cache --update add build-base && \
-    pip install -r /app/requirements.txt && \
-    apk del build-base
+RUN pip install -r /app/requirements.txt
 
 ENV POST_DATABASE_HOST post_db 
 ENV POST_DATABASE posts
+
 CMD ["python3", "post_app.py"]
