--- a/src/post-py/Dockerfile
+++ b/src/post-py/Dockerfile
@@ -1,11 +1,13 @@
-FROM python:3.6.0-alpine
+FROM python:3.6-alpine
 
 WORKDIR /app
 ADD . /app
 
-RUN pip install -r /app/requirements.txt
+RUN apk --no-cache --update add build-base && \
+    pip install -r /app/requirements.txt && \
+    apk del build-base
 
-ENV POST_DATABASE_HOST post_db 
+ENV POST_DATABASE_HOST post_db
 ENV POST_DATABASE posts
 
-CMD ["python3", "post_app.py"]
+ENTRYPOINT ["python3", "post_app.py"]
