--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,73 +1,63 @@
 version: '3.3'
 services:
-
   post_db:
     image: mongo:3.2
     volumes:
       - post_db:/data/db
     networks:
-      - back_net
-
+      back_net:
+        aliases:
+          - post_db
+          - comment_db
   ui:
+    build: ../src/ui
     image: ${USERNAME}/ui:${UI_VERSION}
+    environment:
+      - ZIPKIN_ENABLED=${ZIPKIN_ENABLED}
     ports:
-      - ${UI_PORT}:${UI_PORT}/tcp
+      - ${UI_PORT}:9292/tcp
     networks:
       - front_net
-    depends_on:
-      - post
-      - comment
-
+    logging:
+      driver: "fluentd"
+      options:
+        fluentd-address: localhost:24224
+        tag: service.ui
   post:
+    build: ../src/post-py
     image: ${USERNAME}/post:${POST_VERSION}
+    environment:
+      - ZIPKIN_ENABLED=${ZIPKIN_ENABLED}
     networks:
       - back_net
       - front_net
-    environment:
-      - POST_DATABASE_HOST=post_db
-    depends_on:
-      - post_db
-
+    logging:
+      driver: "fluentd"
+      options:
+        fluentd-address: localhost:24224
+        tag: service.post
   comment:
+    build: ../src/comment
     image: ${USERNAME}/comment:${COMMENT_VERSION}
-    networks:
-      - back_net
-      - front_net
     environment:
-      - COMMENT_DATABASE_HOST=post_db
-    depends_on:
-      - post_db
-
-  prometheus:
-    image: ${USERNAME}/prometheus
-    ports:
-      - '9090:9090'
-    volumes:
-      - prometheus_data:/prometheus
-    command:
-      - '--config.file=/etc/prometheus/prometheus.yml'
-      - '--storage.tsdb.path=/prometheus'
-      - '--storage.tsdb.retention=1d'
+      - ZIPKIN_ENABLED=${ZIPKIN_ENABLED}
     networks:
-      - front_net
       - back_net
-
-  node-exporter:
-    image: prom/node-exporter:v0.15.2
-    user: root
-    volumes:
-      - /proc:/host/proc:ro
-      - /sys:/host/sys:ro
-      - /:/rootfs:ro
-    command:
-      - '--path.procfs=/host/proc'
-      - '--path.sysfs=/host/sys'
-      - '--collector.filesystem.ignored-mount-points="^/(sys|proc|dev|host|etc)($$|/)"'
+      - front_net
 
 volumes:
   post_db:
-  prometheus_data:
 
 networks:
   back_net:
+    driver: bridge
+    ipam:
+      driver: default
+      config:
+        - subnet: 10.0.2.0/24
   front_net:
+    driver: bridge
+    ipam:
+      driver: default
+      config:
+        - subnet: 10.0.1.0/24
