--- a/docker/.env.example
+++ b/docker/.env.example
@@ -1,5 +1,6 @@
 USERNAME=dmitriyvakulenko
 UI_PORT=9292
-UI_VERSION=latest
-COMMENT_VERSION=latest
-POST_VERSION=latest
+UI_VERSION=logging
+COMMENT_VERSION=logging
+POST_VERSION=logging
+ZIPKIN_ENABLED=true
