--- a/src/ui/Dockerfile
+++ b/src/ui/Dockerfile
@@ -1,19 +1,19 @@
-FROM ruby:2.5-alpine
-
-RUN apk --no-cache --update add build-base
+FROM ubuntu:16.04
+RUN apt-get update \
+    && apt-get install -y ruby-full ruby-dev build-essential \
+    && gem install bundler -v 2.3.26 --no-ri --no-rdoc
 
 ENV APP_HOME /app
 RUN mkdir $APP_HOME
+
 WORKDIR $APP_HOME
 ADD Gemfile* $APP_HOME/
+RUN bundle install
 ADD . $APP_HOME
-
-RUN bundle update --bundler && \
-    bundle install && \
-    apk del build-base
 
 ENV POST_SERVICE_HOST post
 ENV POST_SERVICE_PORT 5000
 ENV COMMENT_SERVICE_HOST comment
 ENV COMMENT_SERVICE_PORT 9292
+
 CMD ["puma"]
